--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" style="color: white;" href="#">Home</a>
+                <a class="nav-link active" style="color: white;" href="{{ url_for('.home') }}">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" style="color: white;" href="{{ url_for('.commentary') }}" target="_blank">Live Commentary</a>
