--- a/templates/commentary.html
+++ b/templates/commentary.html
@@ -5,7 +5,8 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <div class="card">
+      <div class="card my-2">
+        <div class="card-header"><h6>RCB vs AUSTRALIA</h6></div>
         <div class="card-body" style="height: 50em;overflow-y: auto;">
           <ul class="nav nav-tabs">
             <li class="nav-item">
@@ -129,7 +130,7 @@
     constant = constant + 0.1;
   }
 
-setInterval(fetchSummaries, 2000); // fetch data every 5 seconds
+setInterval(fetchSummaries, 8000); // fetch data every 5 seconds
 </script>
 
 {% endblock %}
