--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
                 <a class="nav-link active" style="color: white;" href="{{ url_for('.home') }}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" style="color: white;" href="{{ url_for('.commentary') }}" target="_blank">Live Commentary</a>
+                <a class="nav-link active" style="color: white;" href="{{ url_for('.commentary') }}">Live Commentary</a>
               </li>
             </ul>
           </div>
