--- a/templates/commentary.html
+++ b/templates/commentary.html
@@ -6,7 +6,7 @@
   <div class="row">
     <div class="col-12">
       <div class="card my-2">
-        <div class="card-header"><h6>RCB vs AUSTRALIA</h6></div>
+        <div class="card-header"><h6>RCB vs Mumbai Indians</h6></div>
         <div class="card-body" style="height: 50em;overflow-y: auto;">
           <ul class="nav nav-tabs">
             <li class="nav-item">
